--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - "*"
+  workflow_dispatch:    
 
 jobs:
   docker:
@@ -23,6 +24,11 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ywmdocker/palworld
+          tags: |
+            # 被动触发：用 tag
+            type=ref,event=tag
+            # 手动触发：用 latest
+            type=raw,value=latest,enable=${{ github.event_name == 'workflow_dispatch' }}
 
       - name: Build and push
         id: docker_build
